RESOLVED FIXED188926
Using Touch Bar to scrub video on Youtube results in video playback freeze
https://bugs.webkit.org/show_bug.cgi?id=188926
Summary Using Touch Bar to scrub video on Youtube results in video playback freeze
Jer Noble
Reported 2018-08-24 12:36:26 PDT
Using Touch Bar to scrub video on Youtube results in video playback freeze
Attachments
Patch (5.88 KB, patch)
2018-08-24 12:56 PDT, Jer Noble
no flags
Patch for landing (5.88 KB, patch)
2018-08-24 14:02 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2018-08-24 12:37:00 PDT
Jer Noble
Comment 2 2018-08-24 12:56:06 PDT
Eric Carlson
Comment 3 2018-08-24 13:16:32 PDT
Comment on attachment 348035 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=348035&action=review > Source/WebCore/ChangeLog:12 > + results in a round-trip between `float in -> MediaTime -> float out` where in != out, we will wait forever for > + time jump observer to fire. Break the cycle by comparing m_lastSeekTime to the synchronizerTime only after Nit: ... wait for *the* time jump observer ...
Jer Noble
Comment 4 2018-08-24 14:02:57 PDT
Created attachment 348039 [details] Patch for landing
WebKit Commit Bot
Comment 5 2018-08-24 14:40:59 PDT
Comment on attachment 348039 [details] Patch for landing Clearing flags on attachment: 348039 Committed r235334: <https://trac.webkit.org/changeset/235334>
WebKit Commit Bot
Comment 6 2018-08-24 14:41:00 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.