Using Touch Bar to scrub video on Youtube results in video playback freeze https://bugs.webkit.org/show_bug.cgi?id=188926

Reviewed by Eric Carlson.

Source/WebCore:

Test: media/media-source/media-source-seek-twice.html

When converting from a double-precision float to a MediaTime, a certain amount of precision is lost. If that
results in a round-trip between `float in -> MediaTime -> float out` where in != out, we will wait forever for
the time jump observer to fire. Break the cycle by comparing m_lastSeekTime to the synchronizerTime only after
m_lastSeekTime has been normalized into a rational-time value.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm:
(WebCore::MediaPlayerPrivateMediaSourceAVFObjC::seekInternal):

LayoutTests:

* media/media-source/media-source-seek-twice-expected.txt: Added.
* media/media-source/media-source-seek-twice.html: Added.


Canonical link: https://commits.webkit.org/203995@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@235334 268f45cc-cd09-0410-ab3c-d52691b4dbfc